--- a/public/uiTest.html
+++ b/public/uiTest.html
@@ -7,10 +7,15 @@
 <style>
 body {margin:0;}
 
+.wrapper {
+  height: 50%;
+  position: relative;
+}
+
 .navbar {
   overflow: hidden;
   background-color: #333;  
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
 }
@@ -63,21 +68,21 @@ body {margin:0;}
 </style>
 </head>
 <body>
+<div class="wrapper">
+  <div class="navbar" id="myNavbar">
+    <a href="#home" class="active">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    <input type="text" id="element"/>
+  </div>
 
-<div class="navbar" id="myNavbar">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-  <input type="text" id="element"/>
+  <div style="padding-left:16px">
+    <h2>Responsive Bottom Navbar Example</h2>
+    <p>Resize the browser window to see how it works.</p>
+  </div>
 </div>
-
-<div style="padding-left:16px">
-  <h2>Responsive Bottom Navbar Example</h2>
-  <p>Resize the browser window to see how it works.</p>
-</div>
-
 <script>
 function myFunction() {
     var x = document.getElementById("myNavbar");
